@@ -1,5 +1,5 @@
 export(plm, pvcm, pgmm, pggls, pht, pcce, pmg, plmtest, phtest, pFtest, detect_lin_dep,
-       is.pconsecutive,
+       is.pconsecutive, within_intercept,
        pvar, pdim, pooltest, dynformula, sargan, mtest, ercomp, pvcovHC,
        pbsytest, pdwtest, pbgtest, pbltest, pwartest, pwtest, pwfdtest, pcdtest,
        plm.data, pdata.frame, between, Between, Within, lag, lead, pFormula, pmodel.response,
@@ -203,3 +203,5 @@ S3method("is.pconsecutive", "data.frame")
 S3method("is.pconsecutive", "pdata.frame")
 S3method("is.pconsecutive", "panelmodel")
 S3method("is.pconsecutive", "pseries")
+# within_intercept
+S3method("within_intercept", "plm")
