@@ -609,4 +609,6 @@ Changes since version 1.5-16
 	* is.pconsecutive: * new function to check if time periods are consecutive per individual,
 	                   * better NA handling, added argument rm.na.tindex.
 	* punbalancedness: data frame interface gains 'index' argument.
+	* within_intercept: new function to calculate an overall intercept along its standard error for FE models
+	                a la Stata (and Gretl), currently just for models with effect = "individual".
 	
